[gd_scene load_steps=14 format=3 uid="uid://dn3r3b635pvcj"]

[ext_resource type="Script" uid="uid://dx43ip4npdl6g" path="res://actors/battlers/TrailNode.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b45mxffwjy7yv" path="res://assets/shaders/trail.png" id="2"]
[ext_resource type="PackedScene" uid="uid://eror20506qkq" path="res://actors/battlers/Trail.tscn" id="3"]
[ext_resource type="Script" uid="uid://dg3ny04agcjtp" path="res://addons/ECM/Entity.gd" id="4"]
[ext_resource type="Script" uid="uid://bx28gpgdlmtid" path="res://addons/ECM/Component.gd" id="6"]
[ext_resource type="Script" uid="uid://bvnpkr7wj1wm7" path="res://combat/components/Owned.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://by53dogpaa2q" path="res://assets/shaders/offset_trail.png" id="9"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="10"]

[sub_resource type="CanvasItemMaterial" id="1"]

[sub_resource type="Gradient" id="2"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GDScript" id="3"]
script/source = "extends Area2D

func get_strategy(ship, distance, game_mode):
	if ship != get_parent().get_parent().ship: # very ugly
		return {\"avoid\": 1}
	return {}
"

[sub_resource type="GDScript" id="4"]
script/source = "extends Area2D


func get_strategy(ship, distance, game_mode):
	return {\"avoid\": 1}
"

[sub_resource type="Gradient" id="5"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[node name="Trail" type="Marker2D" groups=["TrailLayer", "Trails"]]
script = ExtResource("1")
trail_length = 50
trail_texture = ExtResource("2")

[node name="Trail" parent="." instance=ExtResource("3")]
visible = false
material = SubResource("1")
width = 80.0
gradient = SubResource("2")
time_alive_per_point = 1.5

[node name="NearArea" type="Area2D" parent="Trail"]
collision_layer = 524288
collision_mask = 3
script = SubResource("3")

[node name="Strategic" parent="Trail/NearArea" instance=ExtResource("10")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trail/NearArea"]

[node name="Entity" type="Node" parent="Trail/NearArea"]
script = ExtResource("4")

[node name="PhaseThroughDeadly" type="Node" parent="Trail/NearArea/Entity"]
script = ExtResource("6")

[node name="NoSelfDeadly" type="Node" parent="Trail/NearArea/Entity"]
script = ExtResource("6")

[node name="Owned" type="Node" parent="Trail/NearArea/Entity"]
script = ExtResource("8")

[node name="FarArea" type="Area2D" parent="Trail"]
collision_layer = 524288
collision_mask = 3
script = SubResource("4")

[node name="Strategic" parent="Trail/FarArea" instance=ExtResource("10")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trail/FarArea"]

[node name="Entity" type="Node" parent="Trail/FarArea"]
script = ExtResource("4")

[node name="PhaseThroughDeadly" type="Node" parent="Trail/FarArea/Entity"]
script = ExtResource("6")

[node name="Owned" type="Node" parent="Trail/FarArea/Entity"]
script = ExtResource("8")

[node name="InnerTrail" parent="." instance=ExtResource("3")]
visible = false
width = 18.0
gradient = SubResource("5")
texture = ExtResource("9")
trail_length = 5
time_alive_per_point = 0.4
